@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-08-01T08:16:14Z",
+  "timestamp" : "2022-08-02T01:13:19Z",
   "count_outdated" : 424,
   "uniques_outdated" : 229,
-  "count" : 451,
+  "count" : 452,
   "uniques" : 243,
   "clones" : [
     {
@@ -91,8 +91,8 @@
     },
     {
       "timestamp": "2022-08-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
