@@ -1,3 +1,10 @@
+2022-08-02T01:13:19Z:
+* notice: last 14d: unq all: 2 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 229 424 / 243 451
+* notice: next accum: outdated-unq outdated-all / unq all: 229 424 / 243 452
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-08-01]
+
 2022-08-01T08:16:14Z:
 * notice: last 14d: unq all: 2 27
 * notice: prev accum: outdated-unq outdated-all / unq all: 229 424 / 242 450
